--- a/public/resume.html
+++ b/public/resume.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Dmitriy's Resume">
     <meta property="og:description" content="Dmitriy Safonov's CV. Experienced software developer / SRE based in Vancouver, Canada. Trans rights are human rights.">
     <meta property="og:image" content="https://raw.githubusercontent.com/livercat/livercat.github.io/main/og_image.jpg">
-    <meta property="article:published_time" content="Wed Sep 27 2023 18:16:44 GMT-0700 (Pacific Daylight Time)">
+    <meta property="article:published_time" content="Wed Sep 27 2023 18:19:46 GMT-0700 (Pacific Daylight Time)">
     <meta name="author" content="Dmitriy Safonov">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -267,7 +267,7 @@
                     </h3>
                     <div class="keyline"></div>
                   </div>
-            <p>Available upon request</p>
+            <p class="summary">Available upon request</p>
           </div>
         </aside>
       </div>
