--- a/public/resume.html
+++ b/public/resume.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
+    <meta name="viewport" content="width=device-width">
     <title>Dmitriy's Resume</title>
     <meta property="og:title" content="Dmitriy's Resume">
     <meta property="og:description" content="Dmitriy Safonov's CV. Experienced software developer / SRE based in Vancouver, Canada. Trans rights are human rights.">
     <meta property="og:image" content="https://raw.githubusercontent.com/livercat/livercat.github.io/main/og_image.jpg">
-    <meta property="article:published_time" content="Wed Sep 27 2023 18:19:46 GMT-0700 (Pacific Daylight Time)">
+    <meta property="article:published_time" content="Wed Sep 27 2023 18:27:18 GMT-0700 (Pacific Daylight Time)">
     <meta name="author" content="Dmitriy Safonov">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
